// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationSearchForm should match snapshot 1`] = `
<form
  className="w-100"
  onSubmit={[MockFunction]}
>
  <div
    className="row"
  >
    <div
      className="col-sm-8 col-md-8 col-lg-3 mb-4"
    >
      <TextInput />
    </div>
    <div
      className="col-sm-4 cold-md-4 col-lg-3 mb-4"
    >
      <button
        className="btn btn-primary w-100"
        type="submit"
      >
        <Spin />
      </button>
    </div>
  </div>
</form>
`;

exports[`LocationSearchForm should match snapshot 2`] = `
<form
  className="w-100"
  onSubmit={[MockFunction]}
>
  <div
    className="row"
  >
    <div
      className="col-sm-8 col-md-8 col-lg-3 mb-4"
    >
      <TextInput />
    </div>
    <div
      className="col-sm-4 cold-md-4 col-lg-3 mb-4"
    >
      <button
        className="btn btn-primary w-100"
        type="submit"
      >
        Submit
      </button>
    </div>
  </div>
</form>
`;
